--- a/modules/web/src/com/rtcab/cfd/web-app.properties
+++ b/modules/web/src/com/rtcab/cfd/web-app.properties
@@ -37,4 +37,6 @@ cuba.useLocalServiceInvocation = true
 cuba.webContextName = app
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
-cuba.web.theme = hover
+cuba.web.theme = helium
+cuba.web.loginScreenId=fireLogin
+cuba.web.mainScreenId=fireMainScreen
