--- a/modules/core/src/com/rtcab/cfd/app.properties
+++ b/modules/core/src/com/rtcab/cfd/app.properties
@@ -2,7 +2,7 @@
 #                              Configuration                                  #
 ###############################################################################
 
-cuba.dbmsType = hsql
+cuba.dbmsType = postgres
 
 cuba.springContextConfig = +com/rtcab/cfd/spring.xml
 
@@ -27,8 +27,7 @@ cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
 
 cuba.dataSourceProvider = application
-cuba.dataSource.username = sa
-cuba.dataSource.password =
+cuba.dataSource.username = postgres
+cuba.dataSource.password =postgres
 cuba.dataSource.dbName = cfd-323956
 cuba.dataSource.host = localhost
-cuba.dataSource.port = 9010
