--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,13 @@ buildscript {
         jcenter()
 
 
+        maven {
+            url 'https://cuba-platform.bintray.com/premium'
+            credentials {
+                username("${rootProject['bintrayPremiumRepoUser']}")
+                password("${rootProject['premiumRepoPass']}")
+            }
+        }
     }
     dependencies {
         classpath "com.haulmont.gradle:cuba-plugin:$cubaVersion"
@@ -35,6 +42,7 @@ cuba {
 dependencies {
     appComponent("com.haulmont.cuba:cuba-global:$cubaVersion")
     appComponent('com.haulmont.addon.helium:helium-global:0.3.1')
+    appComponent('com.haulmont.addon.bproc:bproc-global:1.2.0')
 }
 
 def postgres = 'org.postgresql:postgresql:42.2.9'
