--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,12 @@ buildscript {
 
 
         maven {
-            url 'https://cuba-platform.bintray.com/premium'
+            url 'https://repo.cuba-platform.com/content/groups/premium'
             credentials {
-                username("${rootProject['bintrayPremiumRepoUser']}")
-                password("${rootProject['premiumRepoPass']}")
+                username(rootProject.hasProperty('premiumRepoUser') ?
+                        rootProject['premiumRepoUser'] : System.getenv('CUBA_PREMIUM_USER'))
+                password(rootProject.hasProperty('premiumRepoPass') ?
+                        rootProject['premiumRepoPass'] : System.getenv('CUBA_PREMIUM_PASSWORD'))
             }
         }
     }
