--- a/modules/core/src/com/rtcab/cfd/app.properties
+++ b/modules/core/src/com/rtcab/cfd/app.properties
@@ -31,3 +31,5 @@ cuba.dataSource.username = postgres
 cuba.dataSource.password =postgres
 cuba.dataSource.dbName = cfd-323956
 cuba.dataSource.host = localhost
+
+bproc.flowable.autoDeployBpmnResourcesLocationPattern = classpath*:com/rtcab/cfd/bproc/model/bpmn/**/*.bpmn20.xml
