--- a/modules/core/web/WEB-INF/web.xml
+++ b/modules/core/web/WEB-INF/web.xml
@@ -16,7 +16,7 @@
     <!--Application components-->
     <context-param>
         <param-name>appComponents</param-name>
-        <param-value>com.haulmont.cuba com.haulmont.addon.helium com.haulmont.addon.bproc</param-value>
+        <param-value>com.haulmont.cuba com.haulmont.addon.helium com.haulmont.addon.bproc de.diedavids.cuba.userinbox</param-value>
     </context-param>
     <listener>
         <listener-class>com.haulmont.cuba.core.sys.AppContextLoader</listener-class>
